--- a/Solution/CodeSmashTask.Test/CodeSmashTask.Test.csproj
+++ b/Solution/CodeSmashTask.Test/CodeSmashTask.Test.csproj
@@ -23,6 +23,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\codesmash-task\CodeSmashTask.csproj" />
+    <ProjectReference Include="..\CodeSmashTask\CodeSmashTask.csproj" />
   </ItemGroup>
 </Project>
